# tectra-verify

./: .gitignore  LICENSE  README.md  pyproject.toml
tectra_verify/: __init__.py  cli.py  hashing.py  merkle.py  models.py  verifier.py  watermark.py
tests/: test_core.py
